--- a/public/css/components/message-responsive.css
+++ b/public/css/components/message-responsive.css
@@ -47,11 +47,6 @@
         transition: opacity 0.2s ease;
     }
 
-    .message:hover {
-        transform: none;
-        box-shadow: none;
-    }
-
     /* Optimize scrollbars for touch */
     .message-content::-webkit-scrollbar {
         width: 3px;
